@@ -1,3 +1,6 @@
+# 2024/01/27
+- Fix stopping medding early as puller
+
 # 2024/01/22
 - Some fixes around pulling and recover and rest routines related to medding
 - Some workarounds for bst not liking casting paragon on itself
